Fixed text formatting on nav menu to better reflect source material. In turn, I had to create some unique styling for the subscribe button, which messed up prior settings; need to remove underline, fix text alignment, then tweak padding/margin on social elements to better position based on source.

--- a/2-css/public_html/css/main.css
+++ b/2-css/public_html/css/main.css
@@ -18,7 +18,7 @@
 #navbar {
 	height: 100%;
 	float: left;
-	margin: -1px 15px 0px 30px;
+	margin: 0px 15px 0px 31px;
 }
 
 #navbar ul {
@@ -101,24 +101,29 @@
 }
 
 #subscribe-container {
-	height: 30px;
-	width: 102px;
+	height: 32px;
+	width: 107px;
 	padding: 2px;
 	box-sizing: border-box;
 	border-style: solid;
 	border-color: white;
 	border-width: 1px;
-	position: relative;
-	left: 4px;
 }
 
 #subscribe-container p {
-	font-size: 8pt !important;
-	letter-spacing: 0.5px !important;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 8pt;
+	color: white;
+	letter-spacing: 0.5px;
 	position: relative;
+	/*
 	top: 50%;
 	transform: translateY(-50%);
-	margin: 0;
+	*/
+}
+
+#subscribe-container a {
+	text-decoration: none;
 }
 
 #subscribe-img-container {
@@ -152,8 +157,12 @@
 	font-size: 10pt;
 	text-decoration: none;
 	color: white;
-	letter-spacing: -0.4px;
-	list-style-type: none;
+	letter-spacing: 0.1px;
+	transform: scale(1.03, 0.92);
+  -webkit-transform: scale(1.03, 0.92); /* Safari and Chrome */
+  -moz-transform: scale(1.03, 0.92); /* Firefox */
+  -ms-transform: scale(1.03, 0.92); /* IE 9+ */
+  -o-transform: scale(1.03, 0.92); /* Opera */
 }
 
 .nav {
